# stocksPortfolio

./: .env.example  .gitignore  README.md  app.py  deploy.sh  main.py  plan.md  pyproject.toml  requirements.txt
.claude/: settings.json
.github/: heartbeat.txt
.github/workflows/: ci_cd.yml  keep_alive.yml  scheduled_monitoring.yml
agents/: graph.py  knowledge_base_agent.py  market_intel.py  portfolio_analyst.py  risk_manager.py  rl_optimizer_agent.py  state.py  supervisor.py  synthesizer.py
api/routes/: optimizer.py  portfolio.py
core/: config.py  database.py  models.py  persistence.py  runtime.py
docs/superpowers/specs/: 2026-04-17-watchlist-optimizer-design.md
hf_space/: .gitignore  README.md
hf_space/.github/workflows/: ci_cd.yml  keep_alive.yml
hf_space/agents/: knowledge_base_agent.py  supervisor.py
hf_space/api/routes/: portfolio.py
hf_space/core/: models.py
hf_space/hf_space/: requirements.txt
hf_space/hf_space/agents/: synthesizer.py
hf_space/hf_space/hf_space/agents/: optimizer_agent.py  risk_manager.py
hf_space/hf_space/hf_space/api/: backend.py
hf_space/hf_space/hf_space/mcp/: server.py
hf_space/hf_space/hf_space/scripts/: populate_kb.py
hf_space/hf_space/hf_space/services/: stock_service.py
hf_space/monitoring/: metrics_tracker.py
hf_space/scripts/: retrain.py
hf_space/services/: optimizer.py  parsing.py
hf_space/ui/: theme.py
hf_space/ui/components/: optimizer_ui.py
mcp/: server.py
monitoring/: drift_detector.py  metrics_tracker.py
scripts/: check_drift.py  populate_kb.py  push_db.py  retrain.py
services/: knowledge_base.py  llm_service.py  optimizer.py  rl_optimizer.py  stock_service.py
ui/: frontend.py  gradio_interface.py  theme.py
ui/components/: chatbot.py  dashboard.py  optimizer_ui.py
(+5 files in other folders)
